# scorecardbuilderpy

./: EDA and Modelling.ipynb  EDA.ipynb  LICENSE  README.md  scorecard_functions.py  setup.cfg
