[metadata]
name = scorecardbuilderpy
version = 0.0.1
author = Ahmet Tarik Karakas
author_email = atarikkarakas@gmail.com
description = Scorecard builder
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/karakastarik/scorecardbuilderpy
project_urls =
    Bug Tracker = https://github.com/karakastarik/scorecardbuilderpy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src